--- a/public/fun.html
+++ b/public/fun.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>iBeacon demo</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700,800">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,300,700,800">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/fun.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
     <script src="js/fun.js"></script>
   </head>
   <body>
